# lhd068

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
scripts/: generate-icons.cjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/components/: AdvancedSearch.svelte  AlarmModal.svelte  Icon.svelte  Icons.svelte  MedicalRecordForm.svelte  MedicineCard.svelte  Modal.svelte  ReminderAction.svelte  SearchBox.svelte  Sidebar.svelte  icons.js
src/lib/pages/: Dashboard.svelte  Family.svelte  HealthProfile.svelte  Inventory.svelte  MedicalRecordDetail.svelte  MedicalRecords.svelte  Medicines.svelte  PurchaseList.svelte  Records.svelte  Settings.svelte  Statistics.svelte
src/lib/stores/: alarms.js  familyMembers.js  medicalRecords.js  medicationRecords.js  medicines.js  purchaseList.js  search.js  settings.js  storage.js
src/lib/utils/: constants.js  drugInteractions.js  healthProfile.js  helpers.js  medicationSafety.js  notification.js  pdfGenerator.js  scheduler.js  statistics.js
